subprojects {
	apply plugin: 'java-library'

	version "1.1.0"

	sourceCompatibility = 14
	targetCompatibility = 14

	java {
		modularity.inferModulePath = true
	}

	tasks.withType(JavaCompile) {
		options.compilerArgs += "--enable-preview"
	}
	tasks.withType(Test) {
		jvmArgs += "--enable-preview"
	}
	tasks.withType(JavaExec) {
		jvmArgs += "--enable-preview"
	}

	afterEvaluate {
		repositories {
			jcenter()
			maven {
				url "https://maven.pkg.github.com/ealrann/emf-standalone"
				credentials {
					username = findProperty("github.username")
					password = findProperty("github.token")
				}
			}
		}
	}
}
